# python-services

./: README.md  package-lock.json  pyproject.toml  serverless.yml
.github/workflows/: ci.yaml  deploy.yaml
config/: iam.yaml  resources.yml  stages.yml
src/: constants.py
src/credentials/: entities.py  provider.py
src/occupations/adapters/: document_store.py  event_bus.py  fcompras_repository.py  repository.py
src/occupations/domain/: events.py  exceptions.py  model.py
src/occupations/domain/ports/: event_bus.py  fcompras_repository.py  repository.py
src/occupations/entrypoints/: authorizer_handler.py  select_occupation_handler.py  validate_handler.py
src/occupations/services/: select_occupation.py
src/utils/: app_config.py  base.py  boto.py  database.py  datetime.py  decorators.py  exceptions.py  session.py
src/utils/document_store/: factory.py
src/utils/document_store/adapters/: dynamo_db.py
src/utils/message_broker/: factory.py  message_broker.py
src/utils/message_broker/adapters/: sns.py
tests/occupations/domain/: test_model.py
tests/occupations/service/: test_select_ocuppation.py
